🔖 2.8.3 Fix display bug on mobile with v-data-table-footer

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -46,9 +46,3 @@
   src: url("../fonts/static/Figtree-Black.woff2") format('woff2');
   font-weight: 900;
 }
-
-@layer components {
-  .menuable__content__active {
-    @apply !tw-z-20;
-  }
-}
